[package]
name = "lyle"
description = "Lyle (Unofficial) Xtensa ISA Assembler"
homepage = "https://github.com/hiljusti/lyle"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-struct = "0.1.31"
oak = "0.8"
oak_runtime = "0.6"